Fixes for production

--- a/index.html
+++ b/index.html
@@ -3,19 +3,49 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Little Loops - Premium Knitting Patterns & Craft Beads</title>
-    <meta name="description" content="Discover beautiful knitting patterns and premium craft beads at Little Loops. High-quality supplies for all your creative projects." />
+
+    <title>Little Loops – Premium Knitting Patterns & Craft Beads</title>
+    <meta
+      name="description"
+      content="Discover beautiful knitting patterns and premium craft beads at Little Loops. High-quality supplies for all your creative projects."
+    />
     <meta name="author" content="Little Loops" />
-    <meta name="keywords" content="knitting patterns, craft beads, handmade, knitting supplies, jewelry making, crafting" />
+    <meta
+      name="keywords"
+      content="knitting patterns, craft beads, handmade, knitting supplies, jewelry making, crafting"
+    />
 
-    <meta property="og:title" content="Little Loops - Premium Knitting Patterns & Craft Beads" />
-    <meta property="og:description" content="Discover beautiful knitting patterns and premium craft beads at Little Loops. High-quality supplies for all your creative projects." />
+    <!-- Open Graph / Social Sharing -->
+    <meta
+      property="og:title"
+      content="Little Loops – Premium Knitting Patterns & Craft Beads"
+    />
+    <meta
+      property="og:description"
+      content="Discover beautiful knitting patterns and premium craft beads at Little Loops. High-quality supplies for all your creative projects."
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://www.littleloops.no/" />
+    <meta
+      property="og:image"
+      content="https://www.littleloops.no/og-image.png"
+    />
 
+    <!-- Twitter / X Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@littleloops" />
+    <meta
+      name="twitter:title"
+      content="Little Loops – Premium Knitting Patterns & Craft Beads"
+    />
+    <meta
+      name="twitter:description"
+      content="Discover beautiful knitting patterns and premium craft beads at Little Loops."
+    />
+    <meta
+      name="twitter:image"
+      content="https://www.littleloops.no/og-image.png"
+    />
   </head>
 
   <body>
